# multi-agent

./: .env.example  .gitignore  README.md  cli.py  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
config/: domains.yaml  etl_agents.yaml  etl_config.yaml  etl_tasks.yaml  marketing_agents.yaml  marketing_config.yaml  marketing_tasks.yaml  sst_agents.yaml  sst_config.yaml  sst_tasks.yaml
data/: sample_input.csv
demos/: README.md  demo_direct_gemini.py  demo_gemini.py  demo_simple.py  demo_sst.py
docs/: ESTADO_SISTEMA.md  RESULTADO_FINAL.md  SISTEMA_FUNCIONANDO.md  api-setup-guide.md  etl_README.md  etl_agents_design.md  etl_architecture.md  etl_production_checklist.md  etl_risks_mitigations.md  sst_multiagent.md
examples/: README.md  construction_risk_assessment.py  demo_etl.py  ecommerce_campaign_optimization.py  fintech_startup_analysis.py  healthtech_content_strategy.py  saas_competitive_analysis.py
src/: __init__.py
src/etl_multiagent/: __init__.py
src/etl_multiagent/adapters/: __init__.py  destinations.py  sources.py  transformers.py
src/etl_multiagent/config/: __init__.py  settings.py
src/etl_multiagent/crews/: __init__.py  etl_orchestration_crew.py
src/etl_multiagent/domain/: __init__.py  entities.py  use_cases.py
src/etl_multiagent/flows/: __init__.py  etl_pipeline_flow.py
src/etl_multiagent/ports/: __init__.py
src/marketing_multiagent/: __init__.py  main.py
src/marketing_multiagent/crews/: __init__.py  competitor_analysis_crew.py  content_strategy_crew.py  digital_marketing_crew.py  market_research_crew.py
src/marketing_multiagent/flows/: __init__.py  campaign_optimization_flow.py  marketing_intelligence_flow.py
src/marketing_multiagent/tools/: analytics_tools.py  competitor_analysis_tools.py  content_tools.py  market_research_tools.py
src/multiagent/: __init__.py  cli.py  config_loader.py  registry.py
src/sst_multiagent/: __init__.py
tests/: test_registry.py
(+6 files in other folders)
