[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "marketing-multiagent"
version = "1.0.0"
description = "Sistema completo de marketing digital multi-agente usando CrewAI"
authors = ["Marketing Team <marketing@company.com>"]
readme = "README.md"
packages = [
  {include = "marketing_multiagent", from = "src"},
  {include = "sst_multiagent", from = "src"},
  {include = "etl_multiagent", from = "src"},
  {include = "multiagent", from = "src"},
]

[tool.poetry.dependencies]
python = "^3.10"
crewai = "^0.203.0"
crewai-tools = "^0.15.0"
pydantic = "^2.5.0"
python-dotenv = "^1.0.0"
requests = "^2.31.0"
openai = "^1.0.0"
langchain = "^0.1.0"
langchain-openai = "^0.1.0"
PyYAML = "^6.0"
pandas = "^2.0.0"
matplotlib = "^3.7.0"
seaborn = "^0.12.0"
plotly = "^5.17.0"
numpy = "^1.24.0"
sqlalchemy = "^2.0.0"
openpyxl = "^3.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
black = "^23.0.0"
isort = "^5.12.0"
flake8 = "^6.0.0"
mypy = "^1.5.0"
pre-commit = "^3.4.0"
jupyter = "^1.0.0"

[tool.poetry.scripts]
marketing-multiagent = "marketing_multiagent.main:main"
multiagent = "multiagent.cli:main"

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["marketing_multiagent"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --cov=src/marketing_multiagent"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]